// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the OrganizationDetailLeft component. Should match snapshot - unauthorized user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="block lg:hidden"
  >
    <div
      class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
    >
      <a
        class="inline text-dial-blue h5"
        href="/"
      >
        Home
      </a>
      <div
        class="inline h5"
      >
         &gt; 
        <a
          class="text-dial-gray-dark"
          href="/"
        />
      </div>
    </div>
  </div>
  <div
    class="h-20"
  >
    <div
      class="w-full inline-flex gap-3"
    >
      <div
        class="inline-flex items-center text-dial-blue text-sm cursor-pointer"
      >
        <svg
          class="mr-1"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M144 208c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zM256 32C114.6 32 0 125.1 0 240c0 47.6 19.9 91.2 52.9 126.3C38 405.7 7 439.1 6.5 439.5c-6.6 7-8.4 17.2-4.6 26S14.4 480 24 480c61.5 0 110-25.7 139.1-46.3C192 442.8 223.2 448 256 448c141.4 0 256-93.1 256-208S397.4 32 256 32zm0 368c-26.7 0-53.1-4.1-78.4-12.1l-22.7-7.2-19.5 13.8c-14.3 10.1-33.9 21.4-57.5 29 7.3-12.1 14.4-25.7 19.9-40.2l10.6-28.1-20.6-21.8C69.7 314.1 48 282.2 48 240c0-88.2 93.3-160 208-160s208 71.8 208 160-93.3 160-208 160z"
          />
        </svg>
        <span>
          Start a Conversation
        </span>
      </div>
    </div>
    <div
      class="h4 font-bold py-4"
    >
      Organization
    </div>
  </div>
  <div
    class="bg-white border-t-2 border-l-2 border-r-2 border-dial-gray lg:mr-6 shadow-lg"
  >
    <div
      class="flex flex-row p-1.5 border-b border-dial-gray text-xs font-semibold text-dial-cyan"
    >
      <img
        alt="Logo for: Principles for Digital Development"
        class="mr-2 h-6"
        src="/icons/digiprins/digiprins.png"
      />
      <div
        class="my-auto"
      >
        ENDORSED ON 2000
      </div>
    </div>
    <div
      class="flex flex-col h-80 p-4"
    >
      <div
        class="text-2xl font-semibold w-4/5 md:w-auto lg:w-64 2xl:w-80 text-dial-purple overflow-hidden"
      >
        Test Organization
      </div>
      <div
        class="m-auto w-3/5 h-3/5 relative"
      >
        <div
          style="display: block; overflow: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; margin: 0px;"
        >
          <img
            alt="Logo for: Test Organization"
            class="w-40"
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
          />
          <noscript />
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-dial-gray-dark text-xs text-dial-gray-light p-6 lg:mr-6 shadow-lg border-b-2 border-dial-gray"
  >
    If you are the owner of this organization, you can update this organization information.
    <div
      class="flex flex-row gap-3"
    >
      <a
        class="text-dial-yellow block mt-2"
        href="https://docs.osc.dial.community/projects/product-registry/en/latest/org_owner.html"
        rel="noreferrer"
        target="_blank"
      >
        Find more information here
      </a>
      <div
        class="border-l border-dial-gray-light mt-2"
      />
      <button
        class="text-dial-yellow block mt-2 border-b border-transparent hover:border-dial-yellow"
        href="/apply-product-owner"
      >
        Apply as Owner
      </button>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the OrganizationDetailLeft component. Should match snapshot - user is admin. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="block lg:hidden"
  >
    <div
      class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
    >
      <a
        class="inline text-dial-blue h5"
        href="/"
      >
        Home
      </a>
      <div
        class="inline h5"
      >
         &gt; 
        <a
          class="text-dial-gray-dark"
          href="/"
        />
      </div>
    </div>
  </div>
  <div
    class="h-20"
  >
    <div
      class="w-full inline-flex gap-3"
    >
      <button
        class="delete-button gap-x-1.5"
        data-testid="delete-button"
        type="button"
      >
        <svg
          class="text-sm"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
          />
          <path
            d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="text-sm"
        >
          Delete
        </span>
      </button>
      <a
        class="inline-flex items-center gap-x-1.5 bg-dial-blue px-2 py-1 rounded-md text-white"
        data-testid="edit-link"
        href="/en/organizations/test_organization/edit"
      >
        <img
          alt="Edit"
          height="12px"
          src="/icons/edit.svg"
          width="12px"
        />
        <span
          class="text-sm"
        >
          Edit
        </span>
      </a>
      <div
        class="inline-flex items-center text-dial-blue text-sm cursor-pointer"
      >
        <svg
          class="mr-1"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M144 208c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zM256 32C114.6 32 0 125.1 0 240c0 47.6 19.9 91.2 52.9 126.3C38 405.7 7 439.1 6.5 439.5c-6.6 7-8.4 17.2-4.6 26S14.4 480 24 480c61.5 0 110-25.7 139.1-46.3C192 442.8 223.2 448 256 448c141.4 0 256-93.1 256-208S397.4 32 256 32zm0 368c-26.7 0-53.1-4.1-78.4-12.1l-22.7-7.2-19.5 13.8c-14.3 10.1-33.9 21.4-57.5 29 7.3-12.1 14.4-25.7 19.9-40.2l10.6-28.1-20.6-21.8C69.7 314.1 48 282.2 48 240c0-88.2 93.3-160 208-160s208 71.8 208 160-93.3 160-208 160z"
          />
        </svg>
        <span>
          Start a Conversation
        </span>
      </div>
    </div>
    <div
      class="h4 font-bold py-4"
    >
      Organization
    </div>
  </div>
  <div
    class="bg-white border-t-2 border-l-2 border-r-2 border-dial-gray lg:mr-6 shadow-lg"
  >
    <div
      class="flex flex-row p-1.5 border-b border-dial-gray text-xs font-semibold text-dial-cyan"
    >
      <img
        alt="Logo for: Principles for Digital Development"
        class="mr-2 h-6"
        src="/icons/digiprins/digiprins.png"
      />
      <div
        class="my-auto"
      >
        ENDORSED ON 2000
      </div>
    </div>
    <div
      class="flex flex-col h-80 p-4"
    >
      <div
        class="text-2xl font-semibold w-4/5 md:w-auto lg:w-64 2xl:w-80 text-dial-purple overflow-hidden"
      >
        Test Organization
      </div>
      <div
        class="m-auto w-3/5 h-3/5 relative"
      >
        <div
          style="display: block; overflow: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; margin: 0px;"
        >
          <img
            alt="Logo for: Test Organization"
            class="w-40"
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
          />
          <noscript />
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-dial-gray-dark text-xs text-dial-gray-light p-6 lg:mr-6 shadow-lg border-b-2 border-dial-gray"
  >
    If you are the owner of this organization, you can update this organization information.
    <div
      class="flex flex-row gap-3"
    >
      <a
        class="text-dial-yellow block mt-2"
        href="https://docs.osc.dial.community/projects/product-registry/en/latest/org_owner.html"
        rel="noreferrer"
        target="_blank"
      >
        Find more information here
      </a>
      <div
        class="border-l border-dial-gray-light mt-2"
      />
      <button
        class="text-dial-yellow block mt-2 border-b border-transparent hover:border-dial-yellow"
        href="/apply-product-owner"
      >
        Apply as Owner
      </button>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the OrganizationDetailLeft component. Should match snapshot - user is organization owner. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="block lg:hidden"
  >
    <div
      class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
    >
      <a
        class="inline text-dial-blue h5"
        href="/"
      >
        Home
      </a>
      <div
        class="inline h5"
      >
         &gt; 
        <a
          class="text-dial-gray-dark"
          href="/"
        />
      </div>
    </div>
  </div>
  <div
    class="h-20"
  >
    <div
      class="w-full inline-flex gap-3"
    >
      <div
        class="inline-flex items-center text-dial-blue text-sm cursor-pointer"
      >
        <svg
          class="mr-1"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M144 208c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zM256 32C114.6 32 0 125.1 0 240c0 47.6 19.9 91.2 52.9 126.3C38 405.7 7 439.1 6.5 439.5c-6.6 7-8.4 17.2-4.6 26S14.4 480 24 480c61.5 0 110-25.7 139.1-46.3C192 442.8 223.2 448 256 448c141.4 0 256-93.1 256-208S397.4 32 256 32zm0 368c-26.7 0-53.1-4.1-78.4-12.1l-22.7-7.2-19.5 13.8c-14.3 10.1-33.9 21.4-57.5 29 7.3-12.1 14.4-25.7 19.9-40.2l10.6-28.1-20.6-21.8C69.7 314.1 48 282.2 48 240c0-88.2 93.3-160 208-160s208 71.8 208 160-93.3 160-208 160z"
          />
        </svg>
        <span>
          Start a Conversation
        </span>
      </div>
    </div>
    <div
      class="h4 font-bold py-4"
    >
      Organization
    </div>
  </div>
  <div
    class="bg-white border-t-2 border-l-2 border-r-2 border-dial-gray lg:mr-6 shadow-lg"
  >
    <div
      class="flex flex-row p-1.5 border-b border-dial-gray text-xs font-semibold text-dial-cyan"
    >
      <img
        alt="Logo for: Principles for Digital Development"
        class="mr-2 h-6"
        src="/icons/digiprins/digiprins.png"
      />
      <div
        class="my-auto"
      >
        ENDORSED ON 2000
      </div>
    </div>
    <div
      class="flex flex-col h-80 p-4"
    >
      <div
        class="text-2xl font-semibold w-4/5 md:w-auto lg:w-64 2xl:w-80 text-dial-purple overflow-hidden"
      >
        Test Organization
      </div>
      <div
        class="m-auto w-3/5 h-3/5 relative"
      >
        <div
          style="display: block; overflow: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; margin: 0px;"
        >
          <img
            alt="Logo for: Test Organization"
            class="w-40"
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
          />
          <noscript />
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-dial-gray-dark text-xs text-dial-gray-light p-6 lg:mr-6 shadow-lg border-b-2 border-dial-gray"
  >
    If you are the owner of this organization, you can update this organization information.
    <div
      class="flex flex-row gap-3"
    >
      <a
        class="text-dial-yellow block mt-2"
        href="https://docs.osc.dial.community/projects/product-registry/en/latest/org_owner.html"
        rel="noreferrer"
        target="_blank"
      >
        Find more information here
      </a>
      <div
        class="border-l border-dial-gray-light mt-2"
      />
      <button
        class="text-dial-yellow block mt-2 border-b border-transparent hover:border-dial-yellow"
        href="/apply-product-owner"
      >
        Apply as Owner
      </button>
    </div>
  </div>
</div>
`;
